--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <meta
+            name="description"
+            content="in-browser markdown | front end mentor"
+        />
+        <link rel="icon" href="/favicon-32x32.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>in-browser markdown</title>
     </head>
     <body class="overflow-x-hidden">
         <div id="app" class="relative"></div>
